package br.unitins.tp1.dto.estilo;

public record EstiloDTO(
    String nome,
    String descricao
) {
} 
