package br.unitins.tp1.dto.itemPedido;

public record ItemPedidoDTO(
    Integer quantidade,
    Long idCamisa
) {

}
