package br.unitins.tp1.dto.marca;

public record MarcaDTO(
    String nome
) {
} 
