package br.unitins.tp1.dto.material;

public record MaterialDTO(
    String nome,
    double porcentagem
) {
    
}
